@@ -1,6 +1,7 @@
 0.8.2+
     added --socket-cmd #142
     stop elapsed timer during overwrite query
+    vfs no report access errors during total size
 0.8.2   2012-10-25:
     fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
     overwrite dialog replace text view with labels
